--- a/index.html
+++ b/index.html
@@ -5,24 +5,86 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500&family=Roboto:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/style.css">
-
-
-    <title>slick</title>
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <title>slider</title>
 </head>
 
 <body>
-    <div class="promt">
-        <div id="input"> <input id="input" type="text"></div>
-        <div id="output"> <input id="output" type="text"></div>
+
+    <div class="container">
+        <div class="head-bg">
+            <div class="head-bg-left"></div>
+            <div class="head-bg-right"></div>
+        </div>
+        <div class="head-info">
+            <p class="head-info-title">High-Quality Furniture Just For You</p>
+            <p class="head-information">Our furniture is made from selected and best quality materials that are suitable for your dream home</p>
+            <div class="head-info-button">
+                <p class="head-info-bt">Shop now</p>
+            </div>
+
+        </div>
+
+        <div class="slider">
+
+            <div>
+                <div class="slider__item">
+                    <div><img class="slide_one" src="assets/img/left.png" alt="Left">
+                    </div>
+                </div>
+            </div>
+
+            <div>
+                <div class="slider__item">
+                    <div><img class="slide_two" src="assets/img/center.png" alt="Center">
+                        <div class="item-info">
+                            <p class="item-info-title">Bohauss</p>
+                            <p class="item-info-txt">Luxury big sofa 2-seat</p>
+                            <p class="item-info-price">Rp 17.000.000</p>
+                            <img class="item-info-img" src="assets/img/arrow.png" alt="Arrow">
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div>
+                <div class="slider__item">
+                    <div><img src="assets/img/right.png" alt="right">
+
+                    </div>
+                </div>
+            </div>
+            <div>
+                <div class="slider__item">
+                    <div><img class="slide_four" src="assets/img/four.png" alt="Four">
+
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
+
+    </div>
     </div>
 
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
 
-
-
-    <script src="assets/js/app.js">
+    <script>
+        $('.slider').slick({
+            dots: true,
+            infinite: true,
+            speed: 100,
+            slidesToShow: 3,
+            centerMode: true,
+            variableWidth: true
+        });
     </script>
 </body>
 
+
+</html>
 
 </html>
